# metatooth

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/instructions/: ansible.instructions.md  docker.instructions.md  makefile.instructions.md  nginx.instructions.md  shell.instructions.md
.github/workflows/: integration.yaml
SCAD/: ratchet-strap-1.stl  ratchet-strap-2.stl  ratchet-strap.scad  ratchet-strap.stl
autodex/: .eslintrc.json  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
autodex/autodex/: clean.ts  etl.ts  main.ts  tsconfig.json
autodex/client/: index.html  tsconfig.json  vite.config.ts
autodex/lib/: db.ts  tsconfig.json  types.ts
autodex/server/: main.ts  tsconfig.json
baldur/: CLAUDE.md  Dockerfile  Gemfile  Makefile  README.md  init.rb  nginx.conf
baldur/baldur/: app.rb
baldur/config/: puma.rb
baldur/db/: migrate.rb
baldur/deploy/: Makefile  build.sh
deploy/ansible/: reboot.yml
dialog/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  package-lock.json  package.json
dialog/src/: app.ts  editor.ts  footer.ts  main.ts  style.css  text_editor.ts  viewer.ts
fabrique/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ConanPresets.json  Makefile  conanfile.py
fabrique/doc/: Doxyfile.in
fabrique/fabrique/: CMakeLists.txt  VersionHeader.cmake  main.cpp  version.tpp
fabrique/fabrique/libfabrique/: libfabrique.cpp  libfabrique.hpp
fabrique/fabrique/libfabrique/commands/: WaferCmd.cpp  WaferCmd.hpp
fabrique/tests/smoke/: CMakeLists.txt  main.cpp
growherbert/: README.md  docker-compose.yml  growherbert-com  nginx.conf
growherbert/deploy/: Makefile  build.sh
herbert/: .eslintrc.js  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
herbert/config/: log4js.json  test.json
herbert/deploy/: Makefile  build.sh
herbert/docs/: 0.41.0.md  README.md
herbert/scripts/: 810900812A.licrd.conf  AKB73016012.licrd.conf  b+d.licrd.conf  grove--infrared-emitter.scad  logotype.scad  motion.conf  raspberry-pi-3--model-a+.scad  reimage.sh
herbert/src/: cli.js  config.js  index.js  thermostat.js
herbert/worker/: .gitignore  eslint.config.mjs  index.js  package-lock.json  package.json
kaleidocycle/: Dockerfile  README.md  package-lock.json  package.json
kaleidocycle/config/: kaleidocycle-metatooth-com
kaleidocycle/deploy/: Makefile  build.sh
kaleidocycle/public/: embed.html  index.html  main.css
lynngrown/: docker-compose.yml  lynngrown-com  nginx.conf
lynngrown/deploy/: Makefile  build.sh
magento/: .gitignore  Makefile
magento/ansible/: deploy.yml
magento/src/: .gitignore  composer.json
metalogo/: CMakeLists.txt  README.md  herbert.sh  logotype.scad  lynngrown.sh  metatooth.sh  slogan.sh  slogans.csv
metatooth/api/: FINAL_COMPLETION_SUMMARY.md  FINAL_DELIVERY.md  Gemfile  IMPLEMENTATION.md  INDEX.md  MANIFEST.md  PROJECT_SUMMARY.md  PROJECT_VERIFICATION.md  PROMPT.md  README.md  START_HERE.md  TDD_COMPLETION_REPORT.md  TESTING_COMPLETION_REPORT.md  VERIFICATION_COMPLETE.md  config.ru  docker-compose.yml  ralph.sh
metatooth/www/: README.md  docker-compose.yml  metatooth-com  nginx.conf
multidraw/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py
multidraw/docs/: Doxyfile.in
multidraw/examples/: CMakeLists.txt
multidraw/examples/stlviewer/: CMakeLists.txt  README.md  StlCatalog.cpp  StlCatalog.hpp  StlComponent.cpp  StlComponent.hpp  StlCreator.cpp  StlCreator.hpp  StlEditor.cpp  StlEditor.hpp  StlViewer.cpp  StlViewer.hpp  cube.stl  main.cpp
multidraw/libmultidraw/: CMakeLists.txt  Catalog.cpp  Catalog.hpp  Creator.cpp  Creator.hpp  Editor.cpp  Editor.hpp  History.hpp  Multidraw.cpp  Multidraw.hpp  VersionHeader.cmake  Viewer.cpp  Viewer.hpp  libmultidraw.cpp  libmultidraw.hpp  version.tpp
multidraw/libmultidraw/commands/: Command.cpp  Command.hpp  MacroCmd.cpp  MacroCmd.hpp  SaveAsCmd.cpp  SaveAsCmd.hpp  SaveCmd.cpp  SaveCmd.hpp
multidraw/libmultidraw/components/: Component.cpp  Component.hpp
multidraw/libmultidraw/state_vars/: ComponentNameVar.cpp  ComponentNameVar.hpp  ModifiedStatusVar.cpp  ModifiedStatusVar.hpp  NameVar.cpp  NameVar.hpp  StateVar.hpp
multidraw/libmultidraw/tools/: Tool.hpp
multidraw/tests/package/: CMakeLists.txt  conanfile.py
multidraw/tests/package/src/: example.cpp
multidraw/tests/smoke/: CMakeLists.txt  ExampleCatalog.cpp  ExampleCatalog.hpp  ExampleComponent.cpp  ExampleComponent.hpp  ExampleCreator.cpp  ExampleCreator.hpp  ExampleEditor.cpp  ExampleEditor.hpp  ExampleViewer.cpp  ExampleViewer.hpp  main.cpp
restful/: .gitignore  API.md  COMPLETION_REPORT.md  DELIVERY_CONFIRMATION.txt  DELIVERY_SUMMARY.md  Doxyfile  FINAL_DELIVERY_COMPLETE.md  FINAL_PROJECT_STATUS.md  FINAL_VERIFICATION.txt  Gemfile  PROJECT_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  Rakefile  app.json  init.rb
restful/config/: puma.rb
restful/deploy/: Makefile  build.sh
restful/spec/: spec_helper.rb
timespace/: Dockerfile  Gemfile  app.rb  config.ru  event.rb  nginx.conf
wordpress/: .gitignore  README.md
(+637 files in other folders)
